# gitCiServer

./: CMakeLists.txt  main.cpp
webhooks/: gitCIServer.cpp  gitCIServer.h
